# ChangeLog for media-gfx/cldg-themes
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cldg-themes-10.4-r2 (11 Mar 2010)

  11 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cldg-themes-10.4-r1.ebuild, +cldg-themes-10.4-r2.ebuild:
  Update themes archive.

*cldg-themes-10.4-r1 (10 Mar 2010)

  10 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cldg-themes-10.4.ebuild, +cldg-themes-10.4-r1.ebuild:
  Update themes archive.

*cldg-themes-10.4 (09 Mar 2010)

  09 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldg-themes-10.4.ebuild:
  Bump version.

*cldg-themes-10.0.1 (11 Dec 2009)

  11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldg-themes-10.0.1.ebuild:
  Version bump. Add update boot splash.

*cldg-themes-10.0 (04 Dec 2009)

  04 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cldg-themes-10.0.ebuild, +metadata.xml:
  Bump version.
