@@ -1,9 +1,11 @@
 DIST cldg-themes-10.0.tar.bz2 18610165 RMD160 b7c5514a9c1ec011a84216183f83f239644a0137 SHA1 c2de9d1cb81cf6cc8bde107853fd7e2f2ed41c9d SHA256 2f4bdfc2287af7232c597047e254bdcce0daeeab210c1a1e89c143dcee88a37e
 DIST cldg-themes-10.2.tar.bz2 18288136 RMD160 ab086afdeed9770b3853c60797a0d11f90082787 SHA1 48722111d7fe620acf40e9ea289e6a23c402a300 SHA256 3d2d6d303a6a068b1d6baef8b458438f017b488431e3e91d3dd9d5768edf0c4c
 DIST cldg-themes-10.4.tar.bz2 18019671 RMD160 05cb50c27452a9ea70a5d544fa454cac4715467c SHA1 4d8c502b7544f5b8df352b1f2cb17e5bfc1c1043 SHA256 9461868637fd2701ddd0de7451b938b6ea47ce2b95023fbd5a5b80d2fa053373
+DIST cldg-themes-10.9.tar.bz2 19771834 RMD160 f3c9287b0e11a45ef908fc77a0e49f79144dda8e SHA1 ecb9e67835d6ace86b6a8194745dec446e3586c5 SHA256 03cd611916881259672c29cce8ddf55493f1c4d42d278d221d7eb16d8acf0870
 EBUILD cldg-themes-10.0.1.ebuild 1464 RMD160 fa44dea1121d1764943731ac3c1c1feca96e4d11 SHA1 6be3245255c24241f19f289bc801701a05c99255 SHA256 4f9fdd12b1808175389623f8a052538caced7d171c92c25bff61af2848d14dc6
 EBUILD cldg-themes-10.0.ebuild 1329 RMD160 83b4fe1887cdd4e87af639948c3d755ef0ceb8ee SHA1 e8ea5cfcd1139760e460d148819ff68b719576a7 SHA256 ebe720efd92840d1d86aff132e511dd6a0be678fcc875d5a881e98ae01f9a9b3
 EBUILD cldg-themes-10.2-r3.ebuild 1542 RMD160 177d9fe378df5bb7f1012c82376c7a1efcb795df SHA1 a3d8d59dc909978c0d030c0f5ec1d9c13392ebbf SHA256 73d06d8943e36cd6a5ef14f7cfc35516dbf613c0e4e05462a1f3b6d0f1913aac
 EBUILD cldg-themes-10.4-r2.ebuild 1542 RMD160 a39561db4d4c8ad53cd14199deb9dd2bdeefcdcf SHA1 64c6ce9707e7d914b7c3b6aa21db2baf643e28cf SHA256 d6ebddb72dad5d8ba92946f8421a915bca0fcb034f8cacab91aef9e1717e8971
-MISC ChangeLog 939 RMD160 0e4af516602b15068f6960ee29965c5ae7d8231f SHA1 b8e3ec86c29a3f6935369484b306fc9b4ca516f2 SHA256 a1025025bc9cefe577a740b77b107e607d8dc6a88710d56186248a2538f0221a
+EBUILD cldg-themes-10.9.ebuild 1544 RMD160 f3ce9ec6f04af50c6abcddc16eec8cdcfc6c5612 SHA1 1ac290f7fbee209aab656c310d45ff37b4f14924 SHA256 35a20a20982a35286462c1c5319d953e43c468983c18b539c005a2205d8c93cb
+MISC ChangeLog 1077 RMD160 e130fce7b60c4572cbe244e3ad8a065a588480a4 SHA1 934f515251de8a2da71037aa1fa65beea2f31d05 SHA256 167af4af7a9c74da83950bc7fbf2630825d83ebd41dade834694c00f2da3ed73
 MISC metadata.xml 262 RMD160 663e84f074fee7b06b0e8133fba6e5ef19e25c75 SHA1 4446020395d787f939246f39767f8633ea931a5e SHA256 e3852964a15875d8ea9ef0b30f6aba61440a7ecac12edc6e558bfdbc7f0aee3e
