@@ -1,9 +1,11 @@
 DIST cldx-themes-10.0.tar.bz2 18658254 RMD160 bd85bde89e20c14ad9288b9989b00f54633921da SHA1 0903f0d27772ecd8e3386a15e8e9666341ff7ef0 SHA256 5a6b1f8ef6ad55ab7fe5971b3cb20464feaad28d8d55b5590583758bd909bfe9
 DIST cldx-themes-10.2.tar.bz2 17840632 RMD160 d17acedb0068230e6864abe70339e3d42c9f76fa SHA1 98b648f10c7524f4180c3b5ff1790b37c3c3e3c8 SHA256 d9861602006d6e313e56edd236d109f2f42bee537aa271be362f6428e31913ca
 DIST cldx-themes-10.4.tar.bz2 17844081 RMD160 189ae2481982e6b1b851e61b0a85949f7c45c13a SHA1 5aabe6bac29b8e3bd63de75b41f44a08d9c22041 SHA256 b5633d90550c02f4d611fd510b5ee30f32bc3ca52f9ba0ede869212fbd709201
+DIST cldx-themes-10.9.tar.bz2 19863061 RMD160 ebf7bf3c4a127f1552f6466176eaa8360bec24c2 SHA1 f46f7765e0cc3921c6e1e061730b1f3e1e23b1c8 SHA256 e14cb47aad3c0676a5dbdd0526a13abe9d883e6b296bcae73fba24e1c8823e82
 EBUILD cldx-themes-10.0.1.ebuild 1323 RMD160 2afff01840811b0e8485c2d90f79437e36f862b2 SHA1 222b27940d7bb9dd7775703ce7a3605349a5c891 SHA256 f50a443a4e88ab70abc6f5f96fa1beb036301d44fe482ce18d633d466bff81dd
 EBUILD cldx-themes-10.0.ebuild 1178 RMD160 4ff181459be9fbfdbebc7b957af0a697750c437e SHA1 c5620ce967e379ecb14eb014e088260456c28a70 SHA256 47fb785113b2eb10c3e409eec2ee16a71f4531ee30370f68e94534df3d289417
 EBUILD cldx-themes-10.2-r3.ebuild 1391 RMD160 8c265c834bd62c32a29ebe4de9d834a274abd3f1 SHA1 bc99da47f517ff6896e8ed1fd49df0a9dbf3aa17 SHA256 91bd459cd482e6a524f73ab28bfb2c07bf3a51d1eddde4b109404c99f65c836b
 EBUILD cldx-themes-10.4-r2.ebuild 1470 RMD160 efaf7ecf6ef224eb2b8c6425aec5108c125da31d SHA1 6e779abf05ae74831270c5f6a2f66da652a5ffd8 SHA256 78ba6c346203df4a8086ffbe1e2080fa9fbaf484f9a1891b0438ffea405c52d9
-MISC ChangeLog 1098 RMD160 68abf5904b715ac20f5916961ad1d9a33df58f7d SHA1 2e68803480c668979fb2fd58de8c8467f7a27b0c SHA256 6ad0e49b8ae23abe3ae17502d37a2158eae80f3c548e070f49f0a49978df2614
+EBUILD cldx-themes-10.9.ebuild 1416 RMD160 2b70c3afb33916917f5e3225d8dbad716e00ff86 SHA1 96ec69b2fd4eac77ec8ce862b8c77f7fc286097c SHA256 17c03d5650657df84cd9642c812f6377b90699a662d0d8cf92ab819907b4a0ac
+MISC ChangeLog 1236 RMD160 0608f731319ecfde4cac31a813570a39e7f2e9e1 SHA1 41764203a48fb80512cbf501f743e14622f3bae7 SHA256 c4f70d12a756c1141700837ba232b432fc2c3b77dbf8053ebf2fee9ad7767da8
 MISC metadata.xml 261 RMD160 780ef31c45327481235a981f2595b7a20c84bea7 SHA1 8dab799571d6f6a3ae1fc5df00b2a1467baecbba SHA256 e53f2cc5c63713f127f04a8bb2430c6f2b17da1825772a993f170268352a5858
