@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldg-themes-10.9 (24 Aug 2010)
+
+  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cldg-themes-10.9.ebuild:
+  Bump version.
+
 *cldg-themes-10.4-r2 (11 Mar 2010)
 
   11 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
